--- a/style.css
+++ b/style.css
@@ -139,3 +139,81 @@ p.number0 {
     line-height: 100px;
     font-size: 35px;
 }
+
+
+/*second part of animation circle*/
+
+.part-two-1 {
+    height: 75px;
+    width: 75px;
+    background-color: aqua;
+    border-radius: 100%;
+    animation: part-two-1 alternate infinite;
+    animation-fill-mode: forwards;
+    animation-duration: 3s;
+    position: relative;
+    top: 275px;
+}
+
+@keyframes part-two-1 {
+    100% {
+        border-radius: 0%;
+        transform: translateX(0)
+    }
+
+    0% {
+        border-radius: 100%;
+        background-color: green;
+        transform: translateX(-200px)
+    }
+}
+
+.part-two-2 {
+    height: 50px;
+    width: 50px;
+    background-color: aqua;
+    border-radius: 100%;
+    animation: part-two-2 alternate infinite;
+    animation-fill-mode: forwards;
+    animation-duration: 3s;
+    position: relative;
+    top: 338px;
+}
+
+@keyframes part-two-2 {
+    100% {
+        border-radius: 0%;
+        transform: translateX(0);
+    }
+
+    0% {
+        border-radius: 100%;
+        background-color: green;
+        transform: translateX(-350px);
+    }
+}
+
+.part-two-3 {
+    height: 25px;
+    width: 25px;
+    background-color: aqua;
+    border-radius: 100%;
+    animation: part-two-3 alternate infinite;
+    animation-fill-mode: forwards;
+    animation-duration: 3s;
+    position: relative;
+    top: 375px;
+}
+
+@keyframes part-two-3 {
+    100% {
+        border-radius: 0%;
+        transform: translateY(0px);
+    }
+
+    0% {
+        border-radius: 100%;
+        background-color: green;
+        transform: translateX(-450px);
+    }
+}
