--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
     }
 
     0% {
-        border-radius: 100%;
+        /*        border-radius: 100%;*/
         background-color: orangered;
     }
 }
@@ -57,7 +57,7 @@
     0% {
         border-radius: 100%;
         background-color: yellow;
-        transform: translateX(450px);
+        transform: translateX(375px);
     }
 }
 
@@ -82,7 +82,7 @@
     0% {
         border-radius: 100%;
         background-color: green;
-        transform: translateX(350px);
+        transform: translateX(300px);
     }
 }
 
@@ -107,7 +107,7 @@
     0% {
         border-radius: 100%;
         background-color: blue;
-        transform: translateX(200px)
+        transform: translateX(175px)
     }
 }
 
@@ -160,7 +160,7 @@ p.number0 {
     0% {
         border-radius: 100%;
         background-color: blue;
-        transform: translateX(-200px)
+        transform: translateX(-175px)
     }
 }
 
@@ -172,7 +172,7 @@ p.number0 {
     animation-fill-mode: forwards;
     animation-duration: 3s;
     position: relative;
-    top: 338px;
+    top: 337px;
 }
 
 @keyframes part-two-2 {
@@ -184,7 +184,7 @@ p.number0 {
     0% {
         border-radius: 100%;
         background-color: green;
-        transform: translateX(-350px);
+        transform: translateX(-300px);
     }
 }
 
@@ -208,7 +208,7 @@ p.number0 {
     0% {
         border-radius: 100%;
         background-color: yellow;
-        transform: translateX(-450px);
+        transform: translateX(-375px);
     }
 }
 
@@ -223,7 +223,7 @@ p.number0 {
     animation-duration: 3s;
     position: relative;
     top: 100px;
-    right: 150px
+    right: 150px;
 }
 
 @keyframes part-three-1 {
@@ -235,7 +235,7 @@ p.number0 {
     0% {
         border-radius: 100%;
         background-color: blue;
-        transform: translateY(200px)
+        transform: translateY(175px)
     }
 }
 
@@ -260,7 +260,7 @@ p.number0 {
     0% {
         border-radius: 100%;
         background-color: green;
-        transform: translateY(350px);
+        transform: translateY(300px);
     }
 }
 
@@ -284,6 +284,83 @@ p.number0 {
     0% {
         border-radius: 100%;
         background-color: yellow;
-        transform: translateY(450px);
+        transform: translateY(375px);
+    }
+}
+
+/*fourth part of circle-animation*/
+
+.part-four-1 {
+    height: 75px;
+    width: 75px;
+    background-color: aqua;
+    animation: part-four-1 alternate infinite;
+    animation-fill-mode: forwards;
+    animation-duration: 3s;
+    position: relative;
+    top: 275px;
+    right: 475px
+}
+
+@keyframes part-four-1 {
+    100% {
+        border-radius: 0%;
+        transform: translateY(0)
+    }
+
+    0% {
+        border-radius: 100%;
+        background-color: blue;
+        transform: translateY(-175px)
+    }
+}
+
+.part-four-2 {
+    height: 50px;
+    width: 50px;
+    background-color: aqua;
+    animation: part-four-2 alternate infinite;
+    animation-fill-mode: forwards;
+    animation-duration: 3s;
+    position: relative;
+    top: 338px;
+    right: 600px;
+}
+
+@keyframes part-four-2 {
+    100% {
+        border-radius: 0%;
+        transform: translateY(0);
+    }
+
+    0% {
+        border-radius: 100%;
+        background-color: green;
+        transform: translateY(-300px);
+    }
+}
+
+.part-four-3 {
+    height: 25px;
+    width: 25px;
+    background-color: aqua;
+    animation: part-four-3 alternate infinite;
+    animation-fill-mode: forwards;
+    animation-duration: 3s;
+    position: relative;
+    top: 376px;
+    right: 675px
+}
+
+@keyframes part-four-3 {
+    100% {
+        border-radius: 0%;
+        transform: translateY(0px);
+    }
+
+    0% {
+        border-radius: 100%;
+        background-color: yellow;
+        transform: translateY(-375px);
     }
 }
