finished of animation

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
     }
 
     0% {
-        /*        border-radius: 100%;*/
+        border-radius: 100%;
         background-color: orangered;
     }
 }
